--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking_preview.png" height = 150/></a>
     <br/>
     <p><a href="./public/contact.html">Contact Me</a>
-    <a href="./public/About.html">About Me</a></p>
+    <a href="./public/about.html">About Me</a></p>
 </body>
 </html>
 
